# Learning_Projects

adr_ws/.catkin_tools/profiles/default/: devel_collisions.txt
adr_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
adr_ws/devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
adr_ws/devel/.private/lec1/: .catkin  .rosinstall
adr_ws/devel/.private/lec2/: .catkin  setup.sh
adr_ws/devel/.private/lec3/: .catkin  .rosinstall  local_setup.sh
adr_ws/devel/.private/lec4/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
adr_ws/devel/lib/lec2/: exp0_basic_node  exp1_image_subscriber  exp2_image_subscriber
adr_ws/devel/lib/lec3/: exp3_image_subscriber
adr_ws/devel/lib/lec4/: exp4_feature_detector
adr_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  lec1.pc  lec2.pc  lec3.pc  lec4.pc
adr_ws/logs/lec3/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
adr_ws/logs/lec4/: build.cmake.000.log.stderr  build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr
adr_ws/src/lec1/: CMakeLists.txt  package.xml
adr_ws/src/lec1/launch/: run_rviz.launch
adr_ws/src/lec1/rviz/: adr_rviz.rviz
adr_ws/src/lec2/: CMakeLists.txt  package.xml
adr_ws/src/lec2/launch/: run_exp0.launch  run_exp1.launch  run_exp2.launch
adr_ws/src/lec2/src/: exp1_image_subscriber.cpp  exp2_image_subscriber.cpp
adr_ws/src/lec3/: CMakeLists.txt  package.xml
adr_ws/src/lec4/: CMakeLists.txt
catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/beginner_tutorials/: build.check.001.log.stderr  build.check.002.log.stderr  build.check.004.log.stderr  build.check.005.log.stderr
kalman_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
kalman_ws/logs/EKF_Filter/: build.check.015.log.stderr  build.check.016.log.stderr  build.check.034.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.004.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.016.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.044.log.stderr  build.make.064.log.stderr  build.make.096.log.stderr  build.make.098.log.stderr  build.make.099.log.stderr  build.make.101.log.stderr
kalman_ws/logs/IEKF_Filter/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.024.log.stderr
kalman_ws/logs/ODK_Filter/: build.cmake.000.log.stderr
kalman_ws/src/EKF_Filter/: CMakeLists.txt  package.xml  rviz_config.rviz
kalman_ws/src/IEKF_Filter/: CMakeLists.txt
kalman_ws/src/IEKF_Filter/src/: IEK_Filter.cpp  IEK_Filter.h  main_IEKfilter.cpp
kalman_ws/src/ODK_Filter/: CMakeLists.txt
kalman_ws/src/ODK_Filter/src/: ODK_Filter.cpp  ODK_Filter.h  ex1_KFilter.cpp  main_Kfilter.cpp  output_Kfilter.cpp
slambook2/ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  useHello.cpp
slambook2/ch3/examples/: coordinateTransform.cpp
slambook2/ch3/useEigen/: eigenMatrix.cpp
slambook2/ch3/useGeometry/: eigenGeometry.cpp
slambook2/ch4/: CMakeLists.txt  useSophus.cpp
slambook2/ch4/example/: CMakeLists.txt  trajectoryError.cpp
(+123 files in other folders)
